feat: serve privacy policy & strict JSON scoring

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -23,6 +23,6 @@
   <h2>Your Rights</h2>
   <p>You can clear all local data by uninstalling the extension or clearing your browser’s site data.</p>
   <h2>Contact</h2>
-  <p>Questions? Email us at <a href="mailto:ashu.04cap@gmail.com">you@example.com</a>.</p>
+  <p>Questions? Email us at <a href="mailto:ashu.04cap@gmail.com">ashu.04cap@gmail.com</a>.</p>
 </body>
 </html>
